# denso-pick-and-place

./: README.md
prototyping/handle_arm_gazebo/: README.md  gazebo_open.sh  inverseKinematics.sh  inverseKinematics_gazebo.cpp
prototyping/handle_arm_rviz/: README.md  handle_arm.sh  handle_gripper.sh  inverseKinematics.sh  inverseKinematics_rviz.cpp  rviz_open.sh
ros_denso/: CMakeLists.txt  package.xml
ros_denso/launch/: teste.launch
ros_denso/src/: bridge.py  invKine.py  invKineTest.py  planer.py
vp6242_kinematics_publisher/: CMakeLists.txt  README.md  package.xml
vp6242_kinematics_publisher/src/: vp6242_state_publisher.cpp
